--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@
   flex: 1 1 auto;
   padding: 0 1.5rem;
   max-width: 48rem;
-  margin-top: 4rem;
+  margin-top: 3rem;
 }
 .heading {
   font-size: 2.5rem;
@@ -23,12 +23,15 @@
   letter-spacing: 0.05em;
 }
 
+@media (min-width: 2159px) {
+  .container {
+    margin-top: 7.5rem;
+  }
+}
+
 @media (min-width: 769px) {
   .heading {
     font-size: 3rem;
-  }
-  .container {
-    margin-top: 7.5rem;
   }
 }
 
