Globals CSS change on a notion attribute

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,3 +79,7 @@ a:hover {
 .notion-code {
   @apply dark:text-specialBlue dark:bg-white;
 }
+
+.notion-image-caption {
+  @apply mt-6 !important;
+}
