--- a/themes/etch/layouts/partials/header.html
+++ b/themes/etch/layouts/partials/header.html
@@ -1,5 +1,6 @@
 <header id="banner">
-  <h2><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h2>
+  <h1>{{ .Site.Title }}</h1>
+  {{/*
   <nav>
     <ul>
       {{ range .Site.Menus.main.ByWeight -}}
@@ -10,4 +11,5 @@
       {{- end }}
     </ul>
   </nav>
+  */}}
 </header>
