--- a/themes/etch/layouts/index.html
+++ b/themes/etch/layouts/index.html
@@ -1,4 +1,13 @@
 {{ define "main" }}
-{{ .Content }}
-{{/*{{- partial "posts.html" . -}}*/}}
-{{ end }}
+<script
+    async
+    defer
+    src="https://scripts.simpleanalyticscdn.com/latest.js"
+></script>
+<noscript
+    ><img
+        src="https://queue.simpleanalyticscdn.com/noscript.gif"
+        alt=""
+        referrerpolicy="no-referrer-when-downgrade"
+/></noscript>
+{{ .Content }} {{/*{{- partial "posts.html" . -}}*/}} {{ end }}
