move script head

--- a/themes/etch/layouts/partials/head.html
+++ b/themes/etch/layouts/partials/head.html
@@ -31,5 +31,7 @@
     {{ template "_internal/google_analytics_async.html" . }}
 
     <link rel="canonical" href="{{ .Permalink }}" />
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
     <title>{{ .Title }}</title>
 </head>
