--- a/themes/etch/layouts/index.html
+++ b/themes/etch/layouts/index.html
@@ -1,2 +1,7 @@
-{{ define "main" }} {{ .Content }} {{/*{{- partial "posts.html" . -}}*/}} {{ end
-}}
+{{ define "main" }}
+
+{{ .Content }}
+
+{{/*{{- partial "posts.html" . -}}*/}}
+
+{{ end }}
